@@ -21,6 +21,7 @@
 	* Added passing of whole objects/arrays in template loops
 	* Added a hook to modify a query's response
 	* Changed the SOLR_LINK viewhelper to use the query link builder
+	* Fixed an issue where the relevance view helper tried to calculate relevance although no results were found
 
 2012-07-27  Ingo Renner  <ingo.renner@dkd.de>
 
